<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAndRegister.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRegisterOrLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorDarkBlue"
                android:gravity="center"
                android:text="@string/lPlanning_poker_admin"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/rImageView"
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/rEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:hint="@string/lEmailTextView"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/rPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:hint="@string/lPasswordTextView"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/rButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorOrange"
                android:text="@string/rRegisterButton"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>