<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndRegister.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewRegisterOrLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorDarkBlue"
            android:gravity="center"
            android:text="@string/lPlanning_poker_admin"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />


        <ImageView
            android:id="@+id/rImageView"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/rEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/lEmailTextView" />

        <EditText
            android:id="@+id/rPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/lPasswordTextView"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/rButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorOrange"
            android:text="@string/rRegisterButton"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>